add header, add navigation, style navigation

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,39 @@
 // Navigation Styles here
+
+
+.psuedo-cont {
+    border: solid gray;
+    border-bottom: dashed;
+    border-width: .1rem;
+
+    h2 {
+        border: solid yellow;
+        margin-right: 30rem;
+        margin-left: 30rem;
+        display: flex;
+        justify-content: flex-start;
+    }
+}
+
+.Navigation {
+    max-width: 800px;
+    border: solid red;
+    margin: 0 auto;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.6rem;
+
+    nav {
+        display: flex;
+        align-items: center;
+
+        a {
+            margin-left: 10px;
+
+
+        }
+    }
+
+}
