--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,18 @@
 .home {
 
+  header {
+    border: solid red;
+  }
+
   .content-section {
+    border: solid red;
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+
+
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -24,6 +29,7 @@
   }
 
   .inverse-content {
+    border: solid red;
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
@@ -39,6 +45,7 @@
   }
 
   .content-destination {
+    border: solid red;
     width: 75%;
     margin: 0 auto 30px;
 
@@ -48,6 +55,7 @@
   }
 
   .content-pick {
+    border: solid red;
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
@@ -58,4 +66,6 @@
       margin-bottom: 30px;
     }
   }
-}// home
+}
+
+// home
