--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,17 @@
-// Follow the order in the readme
+// Follow the order in the readm0-
 
-.initial-change {}
+// Imports Below
+
+@import "variables.less";
+@import "mixins.less";
+@import "reset.less";
+@import "global.less";
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
+
+// Begins Here
+
+body {
+    border: solid green;
+}
