--- a/css/index.css
+++ b/css/index.css
@@ -168,34 +168,18 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.psuedo-cont {
-  border: solid gray;
-  border-bottom: dashed;
-  border-width: 0.1rem;
-}
-.psuedo-cont h2 {
-  border: solid yellow;
-  margin-right: 30rem;
-  margin-left: 30rem;
-  display: flex;
-  justify-content: flex-start;
-}
 .Navigation {
+  display: flex;
+  justify-content: space-between;
   max-width: 800px;
   border: solid red;
   margin: 0 auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
-  display: flex;
-  justify-content: flex-end;
   font-size: 1.6rem;
 }
 .Navigation nav {
-  display: flex;
-  align-items: center;
-}
-.Navigation nav a {
-  margin-left: 10px;
+  margin-top: 1.1rem;
 }
 .footer {
   width: 100%;
@@ -213,7 +197,7 @@ img {
 }
 .home .content-section {
   border: solid red;
-  margin: 30px 0;
+  margin: 3rem 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -227,11 +211,11 @@ img {
   padding-left: 1%;
 }
 .home .content-section .img-content img {
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 .home .inverse-content {
   border: solid red;
-  padding-bottom: 30px;
+  padding-bottom: 3rem;
   border-bottom: 2px dashed #C0C0C0;
 }
 .home .inverse-content .text-content {
@@ -245,14 +229,14 @@ img {
 .home .content-destination {
   border: solid red;
   width: 75%;
-  margin: 0 auto 30px;
+  margin: 0 auto 3rem;
 }
 .home .content-destination img {
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 .home .content-pick {
   border: solid red;
-  padding-top: 30px;
+  padding-top: 3rem;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
@@ -260,6 +244,31 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  display: inline-block;
+  padding: 0.5em 3em;
+  border: 0.16em solid black;
+  border-radius: 20px;
+  margin: 0 0.3rem 0.3rem 4rem;
+  box-sizing: border-box;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  color: turquoise;
+  text-align: center;
+  transition: all 0.15s;
+}
+.home .content-pick .destination .btn:hover {
+  color: white;
+  border-color: #DDDDDD;
+  background-color: black;
+  cursor: pointer;
+}
+.home .content-pick .destination .btn:active {
+  color: #BBBBBB;
+  border-color: #BBBBBB;
 }
 body {
   border: solid green;
