--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@
 
   .content-section {
     border: solid red;
-    margin: 30px 0;
+    margin: 3rem 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -23,14 +23,14 @@
       padding-left: 1%;
 
       img {
-        border-radius: 10px;
+        border-radius: 1rem;
       }
     }
   }
 
   .inverse-content {
     border: solid red;
-    padding-bottom: 30px;
+    padding-bottom: 3rem;
     border-bottom: 2px dashed @navigation-border;
 
     .text-content {
@@ -47,23 +47,30 @@
   .content-destination {
     border: solid red;
     width: 75%;
-    margin: 0 auto 30px;
+    margin: 0 auto 3rem;
 
     img {
-      border-radius: 10px;
+      border-radius: 1rem;
     }
   }
 
   .content-pick {
     border: solid red;
-    padding-top: 30px;
+    padding-top: 3rem;
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
 
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+
+      .btn {
+
+        .mybtn(turquoise, 0.16em solid black, white, #DDDDDD, black)
+      }
     }
   }
 }
