--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,39 +1,16 @@
-// Navigation Styles here
-
-
-.psuedo-cont {
-    border: solid gray;
-    border-bottom: dashed;
-    border-width: .1rem;
-
-    h2 {
-        border: solid yellow;
-        margin-right: 30rem;
-        margin-left: 30rem;
-        display: flex;
-        justify-content: flex-start;
-    }
-}
-
 .Navigation {
+    display: flex;
+    justify-content: space-between;
     max-width: 800px;
     border: solid red;
     margin: 0 auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    display: flex;
-    justify-content: flex-end;
     font-size: 1.6rem;
 
+
     nav {
-        display: flex;
-        align-items: center;
+        margin-top: 1.1rem;
 
-        a {
-            margin-left: 10px;
-
-
-        }
     }
-
 }
