--- a/css/index.css
+++ b/css/index.css
@@ -178,8 +178,22 @@ img {
   margin-bottom: 3rem;
   font-size: 1.6rem;
 }
+@media (max-width: 500px) {
+  .Navigation {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 .Navigation nav {
   margin-top: 1.1rem;
+}
+.Navigation nav a {
+  margin-left: 5rem;
+}
+@media (max-width: 500px) {
+  .Navigation nav a {
+    margin-left: 4rem;
+  }
 }
 .footer {
   width: 100%;
