--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,9 +8,26 @@
     margin-bottom: 3rem;
     font-size: 1.6rem;
 
+    @media @mobile {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
 
     nav {
         margin-top: 1.1rem;
 
+        a {
+            margin-left: 5rem;
+
+            @media @mobile {
+                margin-left: 4rem;
+
+            }
+        }
+
+
     }
+
+
 }
