--- a/css/index.css
+++ b/css/index.css
@@ -216,13 +216,29 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    justify-content: center;
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 1rem;
@@ -231,6 +247,13 @@ img {
   border: solid red;
   padding-bottom: 3rem;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -245,6 +268,11 @@ img {
   width: 75%;
   margin: 0 auto 3rem;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 1rem;
 }
@@ -255,13 +283,25 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    justify-content: center;
+    flex-direction: column;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 90%;
+    padding-left: 10%;
+  }
+}
 .home .content-pick .destination .btn {
   display: inline-block;
-  padding: 0.5em 3em;
+  padding: 0.5rem 3rem;
   border: 0.16em solid black;
   border-radius: 20px;
   margin: 0 0.3rem 0.3rem 4rem;
@@ -273,6 +313,13 @@ img {
   color: turquoise;
   text-align: center;
   transition: all 0.15s;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 90%;
+    padding-left: 10%;
+    margin: 0rem;
+  }
 }
 .home .content-pick .destination .btn:hover {
   color: white;
