--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,18 +11,29 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-
-
+    @media @mobile {
+      justify-content: center;
+      flex-direction: column;
+    }
 
 
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+      }
+
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+      }
 
       img {
         border-radius: 1rem;
@@ -34,6 +45,12 @@
     border: solid red;
     padding-bottom: 3rem;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile {
+      display: flex;
+      justify-content: center;
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -51,6 +68,10 @@
     width: 75%;
     margin: 0 auto 3rem;
 
+    @media @mobile {
+      width: 100%;
+    }
+
     img {
       border-radius: 1rem;
     }
@@ -63,10 +84,20 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      justify-content: center;
+      flex-direction: column;
+    }
+
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 90%;
+        padding-left: 10%;
+      }
 
 
       .btn {
