--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,7 +2,7 @@
 
 .mybtn(@text-color: black, @border: Blue, @hov-textc, @hov-bordc, @hov-bgcolor ) {
     display: inline-block;
-    padding: 0.5em 3em;
+    padding: 0.5rem 3rem;
     border: @border;
     border-radius: 20px;
     margin: 0 0.3rem 0.3rem 4rem;
@@ -14,6 +14,12 @@
     color: @text-color;
     text-align: center;
     transition: all 0.15s;
+
+    @media @mobile {
+        width: 90%;
+        padding-left: 10%;
+        margin: 0rem;
+    }
 
     &:hover {
         color: @hov-textc;
