--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,7 @@
     @media @mobile {
       justify-content: center;
       flex-direction: column;
+      padding: 0rem 1.5rem;
     }
 
 
@@ -46,10 +47,12 @@
     padding-bottom: 3rem;
     border-bottom: 2px dashed @navigation-border;
 
+
     @media @mobile {
       display: flex;
       justify-content: center;
       flex-direction: column-reverse;
+      padding: 0rem 1.5rem;
     }
 
     .text-content {
@@ -68,9 +71,13 @@
     width: 75%;
     margin: 0 auto 3rem;
 
+
+
     @media @mobile {
       width: 100%;
+      padding: 0rem 1.5rem;
     }
+
 
     img {
       border-radius: 1rem;
@@ -102,7 +109,7 @@
 
       .btn {
 
-        .mybtn(turquoise, 0.16em solid black, white, #DDDDDD, black)
+        .mybtn(White, #25A4BB, white, black)
       }
     }
   }
