--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,6 @@ img {
   display: flex;
   justify-content: space-between;
   max-width: 800px;
-  border: solid red;
   margin: 0 auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
@@ -206,11 +205,20 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home header {
-  border: solid red;
+.home header img {
+  margin-bottom: 0rem;
+}
+@media (max-width: 500px) {
+  .home header img {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .home header {
+    padding: 0rem 1.5rem;
+  }
 }
 .home .content-section {
-  border: solid red;
   margin: 3rem 0;
   display: flex;
   flex-wrap: wrap;
@@ -220,7 +228,9 @@ img {
   .home .content-section {
     justify-content: center;
     flex-direction: column;
-    padding: 0rem 1.5rem;
+    border-top: dashed;
+    border-width: 0.1rem;
+    padding: 3rem 1.5rem;
   }
 }
 .home .content-section .text-content {
@@ -245,7 +255,6 @@ img {
   border-radius: 1rem;
 }
 .home .inverse-content {
-  border: solid red;
   padding-bottom: 3rem;
   border-bottom: 2px dashed #C0C0C0;
 }
@@ -255,6 +264,8 @@ img {
     justify-content: center;
     flex-direction: column-reverse;
     padding: 0rem 1.5rem;
+    padding-bottom: 3rem;
+    border-top: none;
   }
 }
 .home .inverse-content .text-content {
@@ -266,7 +277,6 @@ img {
   padding-left: 0;
 }
 .home .content-destination {
-  border: solid red;
   width: 75%;
   margin: 0 auto 3rem;
 }
@@ -280,7 +290,6 @@ img {
   border-radius: 1rem;
 }
 .home .content-pick {
-  border: solid red;
   padding-top: 3rem;
   border-top: 2px dashed #C0C0C0;
   display: flex;
@@ -332,7 +341,4 @@ img {
 .home .content-pick .destination .btn:active {
   color: #BBBBBB;
   border-color: #BBBBBB;
-}
-body {
-  border: solid green;
 }
